@@ -41,4 +41,25 @@ public class TestTableModel {
         double doubleNum;
         String stringVal;
     }
+    
+    @DefineTable
+    class AllTypes {
+        boolean  boolCol;
+        java.util.Date dateCol;
+        double doubleCol;
+        int intCol;
+        long longCol;
+        float floatCol;
+        String stringCol;
+        byte[] byteCol;
+        Car carTableCol; // Subtable of the type Car defined as a typed table
+        Object mixedCol; // Can hold any of the types
+    } 
+    
+    @DefineTable
+    class Car {
+        String  brand;
+        String  model;
+        int year;
+    }
 }
