@@ -3,6 +3,10 @@ Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp an
       when the JNI interface is changed.
 !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 
+19-November-2013:
+================
++ Added sort() to view in typed interface.
+
 14-November-2013:
 ================
 + SQLite examples now runs on JDK 7
